# stoa-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  NEXT-MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v2.2-MILESTONE-AUDIT.md  v4.5-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v5.2-MILESTONE-AUDIT.md  v5.25-MILESTONE-AUDIT.md  v5.30-MILESTONE-AUDIT.md  v5.35-MILESTONE-AUDIT.md  v5.4-MILESTONE-AUDIT.md  v5.5-MILESTONE-AUDIT.md  v5.6-MILESTONE-AUDIT.md  v5.7-MILESTONE-AUDIT.md  v5.9-MILESTONE-AUDIT.md
mobile/: app.json  babel.config.js  eas.json  expo-env.d.ts  package.json  tsconfig.json
scripts/: build_lambda_dist.py  check_teacher_terminology.py  dependency_policy.py  generate_client_error_actions.py  generate_phase473_boundary_inventory.py  generate_phase473_private_store_inventory.py  generate_route_authorization_inventory.py  phase473_pytest_guard.py  phase474_pytest_guard.py  probe_bedrock_token_count.py  provision_production_admin.py  reconcile_privileged_identities.py  release_evidence.py  release_gate.py  release_manifest.py  report_artifact_safe_fixture_smoke.mjs  retention_governance_production_smoke.mjs  seed_practice.py  source_handoff.py  verify_phase473_evidence.py  verify_phase474_python_evidence.py  verify_phase475.py
tests/: actor_helpers.py  audit_helpers.py  conftest.py  dynamodb_expression_assertions.py  test_adaptive_learning.py  test_admin_authorization.py  test_admin_report_ops.py  test_ai_operations.py  test_ai_teacher_tools.py  test_attachment_security.py  test_auth_account_lifecycle.py  test_auth_security.py  test_authorization_audit.py  test_backend_workflow_contract.py  test_bedrock_usage_evidence.py  test_bi_observability.py  test_billing_callback_urls.py  test_billing_checkout_commands.py  test_billing_checkout_supersession.py  test_conversations.py  (+109 more)
(+2892 files in other folders)
