[project]
name = "stoa-backend"
version = "0.1.0"
description = "STOA learning platform - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.14.2",
    "boto3>=1.34.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
    "httpx>=0.27.0",
    "stripe>=15.2.0",
    "pillow>=11.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "moto[dynamodb,s3,sqs,ses,rekognition]==5.2.1",
    "ruff==0.15.14",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "time-machine==3.2.0",
    "pytest-socket==0.8.0",
    "boto3-stubs==1.43.16",
    "types-python-jose==3.5.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stoa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
